Input source options does not work on Ubuntu Bionic with gnome-flashback
Setting the 'Input Source Options' to 'Allow different sources for each window' does not work. It does not change layout based on windows, it just stays the same always.
I'm reporting this here because Alberts Muktupāvels asked me to. See here: https://bugs.launchpad.net/ubuntu/+source/gnome-flashback/+bug/1769838